--- a/MultiBite/src/main/resources/application.properties
+++ b/MultiBite/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #db specific properties
-spring.datasource.url=jdbc:mysql://demodb.c1aq2o6oighk.eu-north-1.rds.amazonaws.com:3306/demo
+spring.datasource.url=jdbc:mysql://localhost:3306/demo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=rootpass
+spring.datasource.password=root
 server.port=8088
 
 #ORM s/w specific properties
