--- a/MultiBite/src/main/resources/application.properties
+++ b/MultiBite/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/demo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=rootpass
 server.port=8088
 
 #ORM s/w specific properties
